Colaboratory를 통해 생성됨

--- a/py05_list.ipynb
+++ b/py05_list.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOckppytKmnnF0VqI9DoQAK",
+      "authorship_tag": "ABX9TyOWk5jZxEpgT7zcraDRYSPX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -912,12 +912,254 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numbers=[]\n",
+        "for i in range(5):\n",
+        "  number = random.randint(1,10)\n",
+        "  numbers.append(number)\n",
+        "print(numbers)\n",
+        "sum = 0\n",
+        "\n",
+        "for i in numbers:\n",
+        "  sum += i\n",
+        "print('sum',sum)\n",
+        "\n",
+        "print('avg',sum / len(numbers))\n"
+      ],
       "metadata": {
-        "id": "pJz8qOvx_xIG"
+        "id": "pJz8qOvx_xIG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e5fdd346-8d1e-4392-e8ba-b79b60affbe6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 5, 3, 7, 10]\n",
+            "sum 30\n",
+            "avg 6.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 2.\n",
+        "\n",
+        "1. 빈 리스트(numbers)를 생성.\n",
+        "1. 10 이상, 100 미만의 정수 난수 10개를 numbers에 저장.\n",
+        "1. numbers에서 짝수들만 선택해서 evens 리스트를 만들고 출력.\n",
+        "1. numbers에서 홀수들만 선택해서 odds 리스트를 만들고 출력."
+      ],
+      "metadata": {
+        "id": "jcTNowvbA0Bt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "SyqfxPX5JsLi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = []\n",
+        "for i in range(10):\n",
+        "  number = random.randrange(10, 99)\n",
+        "  numbers.append(number)\n",
+        "print(numbers)\n",
+        "\n",
+        "evens = []\n",
+        "odds = []\n",
+        "for i in range(len(numbers)):\n",
+        "  if numbers[i] % 2 == 0:\n",
+        "    evens.append(numbers[i])\n",
+        "  else:\n",
+        "    odds.append(numbers[i])\n",
+        "print('evens', evens)\n",
+        "print('odds',odds)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1MwSEKONJ6-J",
+        "outputId": "27dc0aaf-fc0a-4f14-a77e-23ecd52bdff5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[24, 19, 81, 57, 92, 26, 26, 87, 76, 53]\n",
+            "evens [24, 92, 26, 26, 76]\n",
+            "odds [19, 81, 57, 87, 53]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 3.\n",
+        "\n",
+        "1. 빈 리스트 numbers를 만듦.\n",
+        "1. -10 이상 10 이하인 범위의 정수 난수 10개를 numbers에 저장.\n",
+        "1. numbers의 원소가 양수이면 True, 그렇지 않으면 False를 저장하는 is_positive 리스트를 만들고 출력."
+      ],
+      "metadata": {
+        "id": "y6jJtZ0KAxsV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = []\n",
+        "is_positive = []\n",
+        "\n",
+        "for i in range(10):\n",
+        "    number = random.randrange(-10, 10)\n",
+        "    numbers.append(number)\n",
+        "    is_positive.append(number > 0)\n",
+        "\n",
+        "print(numbers)\n",
+        "print(is_positive)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mouAjM1BBBaA",
+        "outputId": "deb46968-9b43-404a-a941-05f643a59624"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-4, -6, -2, -10, 1, -7, 3, -8, 0, 3]\n",
+            "[False, False, False, False, True, False, True, False, False, True]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 4.\n",
+        "\n",
+        "1. gender_codes 리스트에 0 또는 1을 랜덤하게 10개를 저장.\n",
+        "1. gender_codes의 값이 0이면 'Male', 그렇지 않으며 'Female'을 저장하는 genders 리스트를 만들고 출력."
+      ],
+      "metadata": {
+        "id": "a0mKXvbMA6d9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gender_codes = []\n",
+        "genders = []\n",
+        "for i in range(10):\n",
+        "  code = random.randrange(0, 2)\n",
+        "  gender_codes.append(code)\n",
+        "\n",
+        "  if code == 0:\n",
+        "    genders.append('Male')\n",
+        "  else:\n",
+        "    genders.append('Femal')\n",
+        "print(gender_codes)\n",
+        "print(genders)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9cyYGOoECFif",
+        "outputId": "903c7ec0-2529-4eab-9993-5ea422c77be0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
+            "['Male', 'Male', 'Femal', 'Male', 'Femal', 'Male', 'Femal', 'Male', 'Femal', 'Male']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 5.\n",
+        "\n",
+        "1. `numbers1`: 100 미만의 정수 난수 10개를 저장하는 리스트.\n",
+        "1. `numbers2`: 100 미만의 정수 난수 10개를 저장하는 리스트.\n",
+        "1. `multiplication`: `numbers1`과 `numbers2`의 같은 인덱스에 있는 원소들끼리의 곱셈 결과를 저장하는 리스트.\n",
+        "1. `subtraction`: `numbers1`의 원소에서 같은 인덱스에 있는 `numbers2`의 원소를 뺀 값을 저장하는 리스트.\n",
+        "\n",
+        "`numbers1`, `numbers2`, `multiplication`, `subtraction`를 출력."
+      ],
+      "metadata": {
+        "id": "wO5QjPBNA83f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers1 = []\n",
+        "numbers2 = []\n",
+        "\n",
+        "multiplication = [] #곱\n",
+        "subtraction = [] #n1-n2\n",
+        "\n",
+        "for i in range(10):\n",
+        "  number1 = random.randrange(100)\n",
+        "  number2 = random.randrange(100)\n",
+        "  numbers2.append(number2)\n",
+        "  numbers1.append(number1)\n",
+        "\n",
+        "  multiplication.append(number1 * number2)\n",
+        "  subtraction.append(number1 - number2)\n",
+        "print('num1',numbers1)\n",
+        "print('num2',numbers2)\n",
+        "print('mul',multiplication)\n",
+        "print('sub',subtraction)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "naInOycnFDg4",
+        "outputId": "ae52abc6-9c8b-4bc1-d173-d4d8d6f558c8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "num1 [68, 40, 98, 80, 30, 92, 66, 73, 83, 94]\n",
+            "num2 [67, 93, 57, 69, 11, 83, 37, 20, 73, 18]\n",
+            "mul [4556, 3720, 5586, 5520, 330, 7636, 2442, 1460, 6059, 1692]\n",
+            "sub [1, -53, 41, 11, 19, 9, 29, 53, 10, 76]\n"
+          ]
+        }
+      ]
     }
   ]
 }
